--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "7b86d33f-5f51-43be-8dc1-6449d0819237"
   },
   "newProjectRoot": "projects",
   "projects": {
@@ -18,12 +19,14 @@
           "options": {
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+           "assets": [
+            "src/assets",
+            "src/favicon.ico",
+            {
+              "glob": "**/*",
+              "input": "public"
+            }
+          ],
             "styles": [
               "src/styles.css"
             ],
